k8s/default/odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: odoo
    spec:
      affinity:
        podAffinity:
          # here we want to deploy on the same region the the primary instance of postgres
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: cnpg.io/cluster
                    operator: Exists
                  - key: role
                    operator: In
                    values:
                      - primary
              topologyKey: topology.kubernetes.io/region
      volumes:
        - name: odoo-filestore
          persistentVolumeClaim:
            claimName: odoo-filestore
        - name: odoo-config
          emptyDir: {}
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: odoo
          image: esmproject.azurecr.io/odoo-kubernetes:latest
          imagePullPolicy: Always
          env: *env
          envFrom: *envFrom
          volumeMounts:
            - name: odoo-filestore
              mountPath: /var/lib/odoo
            - name: odoo-config
              mountPath: /etc/odoo
          resources:
            limits:
              cpu: "500m"
              memory: 1Gi
            requests:
              cpu: "250m"
              memory: 1Gi
          ports:
            - containerPort: 8069
              name: web
            - containerPort: 8072
              name: websocket
          readinessProbe:
            httpGet:
              path: /web/health
              port: 8069
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 2
            failureThreshold: 3
